--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Tool to shorten your urls for free.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index"
   },
   "author": "AJ Harsh Vardhan",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
     "mongoose": "^8.5.3",
-    "nanoid": "^5.0.7"
+    "shortid": "^2.2.16"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
