--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "AJ Harsh Vardhan",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongoose": "^8.5.3",
     "shortid": "^2.2.16"
